[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/childScenes/instructions/instructions.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/instructions/english/1.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/instructions/english/Next.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/instructions/english/Next(v2).png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/instructions/english/Previous.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/instructions/english/Previous(v2).png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/instructions/english/MainMenu.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/instructions/english/MainMenu(v2).png" type="Texture" id=8]















[node name="Node2DInstructions" type="Node2D" index="0"]

position = Vector2( 509.787, 303.802 )
scale = Vector2( 16.0003, 9.38833 )
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Theme" ]

[node name="instro" type="Sprite" parent="." index="0"]

position = Vector2( 0.137961, -0.394514 )
scale = Vector2( 0.034782, 0.0610043 )
texture = ExtResource( 2 )

[node name="next" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 26.0
margin_top = -28.0
margin_right = 32.0
margin_bottom = -25.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true
_sections_unfolded = [ "Textures" ]

[node name="previous" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 24.0
margin_top = -32.0
margin_right = 31.0
margin_bottom = -29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true
_sections_unfolded = [ "Textures" ]

[node name="mainMenu" type="TextureButton" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = -32.0
margin_right = -23.0
margin_bottom = -29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
expand = true
_sections_unfolded = [ "Textures" ]

[connection signal="mouse_entered" from="next" to="." method="_on_next_mouse_entered"]

[connection signal="pressed" from="next" to="." method="_on_next_pressed"]

[connection signal="mouse_entered" from="previous" to="." method="_on_previous_mouse_entered"]

[connection signal="pressed" from="previous" to="." method="_on_previous_pressed"]

[connection signal="mouse_entered" from="mainMenu" to="." method="_on_mainMenu_mouse_entered"]

[connection signal="pressed" from="mainMenu" to="." method="_on_mainMenu_pressed"]


